# OffersMS

./: main.py  pyproject.toml
app/: crud.py  models.py  schemas.py
app/routers/: offers.py
